build: Update dependencies and configuration files
- Updated "@angular" dependencies to version 18.2.0
- Added new "eslint-plugin-jest" dependency
- Added "plugin:@typescript-eslint/recommended-type-checked" and "plugin:@angular-eslint/recommended" extensions to .eslintrc.json
- Updated "plugin:@angular-eslint/recommended" to include "@angular-eslint/no-input-rename" rule
- Updated "prettier" extension to include "plugin:@angular-eslint/recommended" extension in .eslintrc.json
- Updated "ngx-markdown" dependency to version 18.0.0
- Updated "bootstrap-icons" dependency to version 1.11.3
- Updated "@types/node" dependency to version 22.3.0
- Updated "typescript" dependency to version 5.5.4
- Updated "winston" dependency to version 3.14.2
- Updated "zone.js" dependency to version 0.14.10
- Updated "npm-check-updates" dependency to version 17.0.6
- Updated "eslint" dependency to version 8.57.0
- Added new "eslint-plugin-jest" dependency in package.json
- Updated "rxjs" dependency to version 7.8.1
- Updated "karma" dependency to version 6.4.4
- Updated "ts-jest" dependency to version 29.2.4
- Updated "tslint" dependency to version 6.1.3
- Updated "tslint-eslint-rules" dependency to version 5.4.0
- Updated "webpack" dependency to version 5.65.1
- Updated "@angular-eslint/builder" dependency to version 18.3.0
- Updated "@angular-eslint/eslint-plugin" dependency to version 18.3.0
- Updated "@angular-eslint/eslint-plugin-template" dependency to version 18.3.0
- Updated "@angular-eslint/schematics" dependency to version 18.3.0
- Updated "@angular-eslint/template-parser" dependency to version 18.3.0
- Updated "@typescript-eslint/eslint-plugin" dependency to version 8.1.0
- Updated "@typescript-eslint/parser" dependency to version 8.1.0
- Updated "@types/cors" dependency to version 2.8.17
- Updated "@types/eslint" dependency to version 9.6.0
- Updated "@types/eslint__eslintrc" dependency to version 2.1.2
- Updated "@types/eslint__js" dependency to version 8.42.3
- Updated "@typ

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,14 +18,16 @@
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-type-checked",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
         "plugin:jest/recommended",
         "plugin:jest/style",
-        "prettier"
+        "prettier",
+        "plugin:@angular-eslint/recommended"
       ],
       "files": [
-        "./src/*.ts"
+        "src/**/*/*.ts"
       ],
       "rules": {
         "@angular-eslint/component-selector": [
@@ -43,7 +45,8 @@
             "style": "camelCase",
             "type": "attribute"
           }
-        ]
+        ],
+        "@angular-eslint/no-input-rename": "off"
       }
     },
     {
