--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.37.15",
+  "version": "0.37.18",
   "private": true,
   "browser": {
     "fs": false,
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "api": "cd ../3d-inventory-mongo-api && npm run start",
-    "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui",
+    "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui --verbose",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
@@ -34,7 +34,8 @@
     "prestart": "(fuser -n tcp -k 4200)&",
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
     "test": "jest",
-    "upgrade-full": "npm-check-updates -u && npm update && npm upgrade",
+    "eslint": "eslint --fix src",
+    "upgrade-full": "npm-check-updates -u && npm update",
     "watch": "npm --no-git-tag-version version patch && ng serve --watch"
   },
   "husky": {
@@ -54,24 +55,22 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/platform-server": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/animations": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/platform-server": "^18.2.0",
+    "@angular/router": "^18.2.0",
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "@octokit/core": "^6.1.2",
-    "@types/lodash": "^4.17.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "browserify-zlib": "^0.2.0",
-    "bson": "^6.8.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -80,87 +79,91 @@
     "express": "^4.19.2",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
-    "jest-runner-eslint": "^2.2.0",
-    "jest-runner-prettier": "^1.0.0",
     "jquery": "^3.7.1",
     "jsdom": "^24.1.1",
     "lodash": "^4.17.21",
-    "marked": "^12.0.2",
     "mkdirp": "^3.0.1",
     "nav-bar": "^1.0.3",
-    "ngx-markdown": "^17.2.1",
+    "ngx-markdown": "^18.0.0",
     "ngx-pagination": "^6.0.3",
     "node-gyp": "^10.2.0",
     "node-sass": "^9.0.0",
-    "npm-check-updates": "^16.14.20",
+    "npm-check-updates": "^17.0.6",
     "octokit": "^4.0.2",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
     "process": "^0.11.10",
-    "rimraf": "^5.0.7",
+    "rimraf": "^6.0.1",
     "rxjs": "~7.8.1",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
     "three-orbitcontrols-ts": "^0.1.2",
     "timers": "^0.1.1",
     "timers-browserify": "^2.0.12",
-    "ts-jest": "^29.2.3",
+    "ts-jest": "^29.2.4",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.3",
-    "winston": "^3.13.1",
-    "zone.js": "^0.14.8"
+    "winston": "^3.14.2",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^17.0.2",
-    "@angular-devkit/build-angular": "^17.0.6",
-    "@angular-eslint/builder": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "^17.0.0",
-    "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
-    "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
-    "@angular/localize": "^17.0.0",
+    "@angular-builders/custom-webpack": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.2.0",
+    "@angular-eslint/builder": "^18.3.0",
+    "@angular-eslint/eslint-plugin": "^18.3.0",
+    "@angular-eslint/eslint-plugin-template": "^18.3.0",
+    "@angular-eslint/schematics": "^18.3.0",
+    "@angular-eslint/template-parser": "^18.3.0",
+    "@angular/cli": "^18.2.0",
+    "@angular/compiler-cli": "^18.2.0",
+    "@angular/localize": "^18.2.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^9.9.0",
     "@types/cors": "^2.8.17",
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^9.6.0",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.4",
+    "@types/jest": "^29.5.12",
     "@types/jquery": "^3.5.30",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/node": "^20.14.11",
+    "@types/lodash": "^4.17.7",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.3.0",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "angular-cli-ghpages": "^2.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.8.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
     "jasmine-core": "~5.2.0",
     "jest": "^29.7.0",
-    "karma": "~6.4.3",
+    "jest-runner-eslint": "^2.2.0",
+    "jest-runner-prettier": "^1.0.0",
+    "karma": "~6.4.4",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^17.0.0",
-    "lint-staged": "^15.2.7",
-    "ng-packagr": "^17.0.0",
+    "lint-staged": "^15.2.9",
+    "ng-packagr": "^18.2.0",
     "nyc": "^17.0.0",
     "prettier": "3.3.3",
     "three": "^0.167.1",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.17.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^10.0.0"
   }
