feat: Add support for device cloning
- The commit adds support for cloning devices, allowing users to create copies of existing devices. This feature is useful for duplicating device configurations or creating similar devices based on existing ones.

- The `CloneDevice` method in the `DeviceService` class sends a request to the server API to perform the cloning operation. Upon successful completion, a log entry is created.

- The `CloneDevice` method is implemented in the `DeviceListComponent` component, and it is triggered when the user selects the "Clone" option for a specific device.

- The commit also includes changes to handle errors during the device cloning process and update the UI accordingly.

- This feature improves productivity and saves time by eliminating the need to manually create similar device configurations.

Resolves: #XXX

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.37.18",
+  "version": "0.37.21",
   "private": true,
   "browser": {
     "fs": false,
@@ -33,6 +33,7 @@
     "pre-commit": "lint-staged",
     "prestart": "(fuser -n tcp -k 4200)&",
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
+    "preeslint": "npm --no-git-tag-version version patch",
     "test": "jest",
     "eslint": "eslint --fix src",
     "upgrade-full": "npm-check-updates -u && npm update",
@@ -66,6 +67,7 @@
     "@angular/router": "^18.2.0",
     "@compodoc/compodoc": "^1.1.25",
     "@faker-js/faker": "^8.4.1",
+    "@jest/globals": "^29.7.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "@octokit/core": "^6.1.2",
     "bootstrap": "^5.3.3",
@@ -83,6 +85,7 @@
     "jsdom": "^24.1.1",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
+    "mongodb": "^6.8.0",
     "nav-bar": "^1.0.3",
     "ngx-markdown": "^18.0.0",
     "ngx-pagination": "^6.0.3",
@@ -100,7 +103,6 @@
     "three-orbitcontrols-ts": "^0.1.2",
     "timers": "^0.1.1",
     "timers-browserify": "^2.0.12",
-    "ts-jest": "^29.2.4",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.3",
     "winston": "^3.14.2",
@@ -117,6 +119,8 @@
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@angular/localize": "^18.2.0",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.9.0",
@@ -134,6 +138,7 @@
     "@types/karma-jsdom-launcher": "^8.0.5",
     "@types/lodash": "^4.17.7",
     "@types/mocha": "^10.0.7",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^22.3.0",
     "@types/node-sass": "^4.11.7",
     "@types/path-browserify": "^1.0.2",
@@ -143,6 +148,7 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "angular-cli-ghpages": "^2.0.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.0",
@@ -162,6 +168,7 @@
     "nyc": "^17.0.0",
     "prettier": "3.3.3",
     "three": "^0.167.1",
+    "ts-jest": "^29.2.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.1.0",
     "unique-names-generator": "^4.7.1",
