--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.37.21",
+  "version": "0.37.25",
   "private": true,
   "browser": {
     "fs": false,
@@ -14,8 +14,8 @@
     "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui --verbose",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
-    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
-    "compodoc:serve": "compodoc -s",
+    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s --port 8081",
+    "compodoc:serve": "compodoc -s --port 8081",
     "cp": "cp -f README.md src/assets",
     "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
     "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
