--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.37.37",
+  "version": "0.37.38",
   "private": true,
   "browser": {
     "fs": false,
@@ -56,47 +56,47 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^18.2.10",
-    "@angular/common": "^18.2.10",
-    "@angular/compiler": "^18.2.10",
-    "@angular/core": "^18.2.10",
-    "@angular/forms": "^18.2.10",
-    "@angular/platform-browser": "^18.2.10",
-    "@angular/platform-browser-dynamic": "^18.2.10",
-    "@angular/platform-server": "^18.2.10",
-    "@angular/router": "^18.2.10",
+    "@angular/animations": "^19.2.9",
+    "@angular/common": "^19.2.9",
+    "@angular/compiler": "^19.2.9",
+    "@angular/core": "^19.2.9",
+    "@angular/forms": "^19.2.9",
+    "@angular/platform-browser": "^19.2.9",
+    "@angular/platform-browser-dynamic": "^19.2.9",
+    "@angular/platform-server": "^19.2.9",
+    "@angular/router": "^19.2.9",
     "@compodoc/compodoc": "^1.1.26",
-    "@faker-js/faker": "^9.2.0",
+    "@faker-js/faker": "^9.7.0",
     "@jest/globals": "^29.7.0",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
-    "@octokit/core": "^6.1.2",
-    "bootstrap": "^5.3.3",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@octokit/core": "^6.1.5",
+    "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "browserify-zlib": "^0.2.0",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "depcheck": "^1.4.7",
-    "eslint-scope": "^8.2.0",
-    "express": "^4.21.1",
+    "eslint-scope": "^8.3.0",
+    "express": "^5.1.0",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
     "jquery": "^3.7.1",
-    "jsdom": "<=24.0.0",
+    "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
-    "mongodb": "^6.11.0",
+    "mongodb": "^6.16.0",
     "nav-bar": "^1.0.3",
-    "ngx-markdown": "^18.1.0",
+    "ngx-markdown": "^19.1.1",
     "ngx-pagination": "^6.0.3",
-    "node-gyp": "^10.2.0",
-    "npm-check-updates": "^17.1.11",
-    "octokit": "^4.0.2",
+    "node-gyp": "^11.2.0",
+    "npm-check-updates": "^18.0.1",
+    "octokit": "^4.1.3",
     "path-browserify": "^1.0.1",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
-    "rxjs": "~7.8.1",
+    "rxjs": "~7.8.2",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
     "timers": "^0.1.1",
@@ -104,68 +104,68 @@
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.8.1",
     "winston": "^3.17.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^18.0.0",
-    "@angular-devkit/build-angular": "^18.2.11",
-    "@angular-eslint/builder": "^18.4.2",
-    "@angular-eslint/eslint-plugin": "^18.4.2",
-    "@angular-eslint/eslint-plugin-template": "^18.4.2",
-    "@angular-eslint/schematics": "^18.4.2",
-    "@angular-eslint/template-parser": "^18.4.2",
-    "@angular/cli": "^18.2.11",
-    "@angular/compiler-cli": "^18.2.10",
-    "@angular/localize": "^18.2.10",
-    "@eslint/compat": "^1.2.3",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.15.0",
+    "@angular-builders/custom-webpack": "^19.0.1",
+    "@angular-devkit/build-angular": "^19.2.10",
+    "@angular-eslint/builder": "^19.3.0",
+    "@angular-eslint/eslint-plugin": "^19.3.0",
+    "@angular-eslint/eslint-plugin-template": "^19.3.0",
+    "@angular-eslint/schematics": "^19.3.0",
+    "@angular-eslint/template-parser": "^19.3.0",
+    "@angular/cli": "^19.2.10",
+    "@angular/compiler-cli": "^19.2.9",
+    "@angular/localize": "^19.2.9",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^9.6.1",
-    "@types/eslint__eslintrc": "^2.1.2",
-    "@types/eslint__js": "^8.42.3",
+    "@types/eslint__eslintrc": "^3.3.0",
+    "@types/eslint__js": "^9.14.0",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/express": "^5.0.0",
-    "@types/jasmine": "~5.1.4",
+    "@types/express": "^5.0.1",
+    "@types/jasmine": "~5.1.7",
     "@types/jest": "^29.5.14",
     "@types/jquery": "^3.5.32",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jasmine-html-reporter": "^1.7.3",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/lodash": "^4.17.13",
+    "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^22.9.3",
+    "@types/node": "^22.15.3",
     "@types/node-sass": "^4.11.8",
     "@types/path-browserify": "^1.0.3",
     "@types/prismjs": "^1.26.5",
-    "@types/three": "^0.170.0",
+    "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "angular-cli-ghpages": "^2.0.3",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.9.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^15.12.0",
-    "jasmine-core": "~5.4.0",
+    "globals": "^16.0.0",
+    "jasmine-core": "~5.7.1",
     "jest": "^29.7.0",
     "jest-runner-prettier": "^1.0.0",
     "karma": "~6.4.4",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "karma-jsdom-launcher": "^16.0.0",
-    "lint-staged": "^15.2.10",
-    "ng-packagr": "^18.2.1",
+    "karma-jsdom-launcher": "^18.0.0",
+    "lint-staged": "^15.5.1",
+    "ng-packagr": "^19.2.2",
     "nyc": "^17.1.0",
-    "prettier": "3.3.3",
-    "three": "^0.170.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.5.0",
-    "typescript-eslint": "^8.15.0",
-    "uuid": "^11.0.3"
+    "prettier": "3.5.3",
+    "three": "^0.176.0",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
+    "uuid": "^11.1.0"
   }
 }
