feat: Refactor LogComponent and AddModelComponent for improved functionality and readability
- Enhanced LogComponent with pagination and improved documentation.
- Updated AddModelComponent to use FormBuilder for form creation and validation.
- Improved error handling and validation feedback in AddModelComponent template.
- Integrated NgxPaginationModule for pagination in model list.
- Refactored model list component to use standalone LogComponent.
- Added debug information display in AddModelComponent when not in production.
- Cleaned up unused imports and improved code structure across components.
- Updated main.ts to use bootstrapApplication for Angular standalone components.
- Introduced ESLint configuration for better code quality and consistency.
- Removed deprecated app module and migrated to standalone components.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "unional.vscode-sort-package-json",
     "ms-vscode.js-debug-nightly",
     "firefox-devtools.vscode-firefox-debug",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "yoavbls.pretty-ts-errors"
   ]
 }
