--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     ]
   },
   "exclude": [
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
   ],
   "include": [
     "src/**/*.ts"
