feat: Add proxy configuration options for development server

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.39.0",
+  "version": "0.40.0",
   "private": true,
   "type": "module",
   "browser": {
@@ -11,33 +11,22 @@
     "process": false
   },
   "scripts": {
-    "api": "cd ../3d-inventory-mongo-api && npm run start",
-    "build": "npm --no-git-tag-version version patch && ng build 3d-inventory-angular-ui --verbose",
+    "build": "ng build 3d-inventory-angular-ui --verbose",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
     "cp": "cp -f README.md src/assets",
-    "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
-    "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
+    "eslint": "eslint --fix src",
     "kill-ng-serve": "killall -w -v \"ng serve\"",
-    "kill-port-usage-4200": "kill -s 9 `lsof -nP -iTCP:4200 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
-    "kill-port-usage-8080": "kill -s 9 `lsof -nP -iTCP:8080 -sTCP:LISTEN | sed -n 2p | awk '{print $2}'`",
     "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
-    "nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "podman:build": "podman build -t 3d-inventory:0.1 .",
-    "podman:clear": "podman rmi --all --force",
-    "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
-    "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
     "pre-commit": "lint-staged",
     "prestart": "(fuser -n tcp -k 4200)&",
     "start": "npm --no-git-tag-version version patch && npm run cp && ng serve --watch",
-    "preeslint": "npm --no-git-tag-version version patch",
     "test": "jest",
-    "eslint": "eslint --fix src",
-    "upgrade-full": "npm-check-updates -u && npm update",
+    "upgrade-full": "npm-check-updates -u && npm upgrade",
     "watch": "npm --no-git-tag-version version patch && ng serve --watch"
   },
   "husky": {
@@ -57,15 +46,15 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^19.2.8",
-    "@angular/common": "^19.2.8",
-    "@angular/compiler": "^19.2.8",
-    "@angular/core": "^19.2.8",
-    "@angular/forms": "^19.2.8",
-    "@angular/platform-browser": "^19.2.8",
-    "@angular/platform-browser-dynamic": "^19.2.8",
-    "@angular/platform-server": "^19.2.8",
-    "@angular/router": "^19.2.8",
+    "@angular/animations": "^19.2.9",
+    "@angular/common": "^19.2.9",
+    "@angular/compiler": "^19.2.9",
+    "@angular/core": "^19.2.9",
+    "@angular/forms": "^19.2.9",
+    "@angular/platform-browser": "^19.2.9",
+    "@angular/platform-browser-dynamic": "^19.2.9",
+    "@angular/platform-server": "^19.2.9",
+    "@angular/router": "^19.2.9",
     "@compodoc/compodoc": "^1.1.26",
     "@faker-js/faker": "^9.7.0",
     "@jest/globals": "^29.7.0",
@@ -110,25 +99,25 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^19.0.1",
-    "@angular-devkit/build-angular": "^19.2.9",
+    "@angular-devkit/build-angular": "^19.2.10",
     "@angular-eslint/builder": "^19.3.0",
     "@angular-eslint/eslint-plugin": "^19.3.0",
     "@angular-eslint/eslint-plugin-template": "^19.3.0",
     "@angular-eslint/schematics": "^19.3.0",
     "@angular-eslint/template-parser": "^19.3.0",
-    "@angular/cli": "^19.2.9",
-    "@angular/compiler-cli": "^19.2.8",
-    "@angular/localize": "^19.2.8",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.27.0",
-    "@eslint/compat": "^1.2.8",
+    "@angular/cli": "^19.2.10",
+    "@angular/compiler-cli": "^19.2.9",
+    "@angular/localize": "^19.2.9",
+    "@babel/preset-env": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@eslint/compat": "^1.2.9",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.25.1",
+    "@eslint/js": "^9.26.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^9.6.1",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__eslintrc": "^3.3.0",
     "@types/eslint__js": "^9.14.0",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.7",
     "@types/jest": "^29.5.14",
@@ -139,22 +128,22 @@
     "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^22.15.2",
+    "@types/node": "^22.15.3",
     "@types/node-sass": "^4.11.8",
     "@types/path-browserify": "^1.0.3",
     "@types/prismjs": "^1.26.5",
     "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "angular-cli-ghpages": "^2.0.3",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-node": "11.1.0",
     "globals": "^16.0.0",
-    "jasmine-core": "~5.7.0",
+    "jasmine-core": "~5.7.1",
     "jest": "^29.7.0",
     "jest-runner-prettier": "^1.0.0",
     "karma": "~6.4.4",
@@ -169,8 +158,13 @@
     "three": "^0.176.0",
     "ts-jest": "^29.3.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0",
+    "typescript-eslint": "^8.31.1",
     "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0"
+  },
+  "serve": {
+    "options": {
+      "proxyConfig": "src/proxy.conf.json"
+    }
   }
 }
