--- a/angular.json
+++ b/angular.json
@@ -37,11 +37,11 @@
               }
             ],
             "styles": [
-              "./src/styles.scss",
-              "./node_modules/bootstrap/scss/bootstrap.scss",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-              "./node_modules/prismjs/themes/prism-okaidia.css",
-              "./node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              "node_modules/prismjs/themes/prism-okaidia.css",
+              "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.js",
