--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "depcheck": "^1.4.7",
     "eslint-scope": "^8.3.0",
     "express": "^5.1.0",
+    "font-awesome": "^4.7.0",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
     "jquery": "^3.7.1",
@@ -115,9 +116,9 @@
     "@eslint/js": "^9.26.0",
     "@types/cors": "^2.8.17",
     "@types/eslint": "^9.6.1",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__eslintrc": "^3.3.0",
     "@types/eslint__js": "^9.14.0",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.7",
     "@types/jest": "^29.5.14",
