--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
     "rxjs": "~7.8.2",
+    "showdown": "^2.1.0",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
     "three-orbitcontrols-ts": "^0.1.2",
@@ -133,6 +134,7 @@
     "@types/node-sass": "^4.11.8",
     "@types/path-browserify": "^1.0.3",
     "@types/prismjs": "^1.26.5",
+    "@types/showdown": "^2.0.6",
     "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
