--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "depcheck": "^1.4.7",
     "eslint-scope": "^8.3.0",
     "express": "^5.1.0",
+    "firebase": "^11.9.1",
     "font-awesome": "^4.7.0",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
