--- a/angular.json
+++ b/angular.json
@@ -4,27 +4,27 @@
   "newProjectRoot": "projects",
   "projects": {
     "3d-inventory-angular-ui": {
+      "root": "src",
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
         }
       },
-      "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "sourceMap": true,
             "outputPath": "dist",
             "index": "./src/index.html",
-            "main": "./src/main.ts",
-            "polyfills": "./src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "@angular/localize/init",
+              "src/polyfills.ts"
+            ],
             "tsConfig": "./tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -37,9 +37,9 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/prismjs/themes/prism-okaidia.css",
               "src/styles.scss"
             ],
@@ -72,17 +72,13 @@
               "outputHashing": "all"
             },
             "optimization": {
-              "buildOptimizer": true,
               "optimization": true,
-              "vendorChunk": false,
               "extractLicenses": true,
               "sourceMap": false,
               "namedChunks": false
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "namedChunks": true
             }
@@ -90,7 +86,7 @@
           "defaultConfiguration": "development"
         },
         "serve": {
-          "builder": "@angular-builders/custom-webpack:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "buildTarget": "3d-inventory-angular-ui:build:development",
             "proxyConfig": "src/proxy.conf.json"
@@ -104,63 +100,48 @@
             }
           },
           "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "3d-inventory-angular-ui:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "./src/favicon.ico",
-              "./src/assets",
-              {
-                "glob": "*.svg",
-                "input": "./node_modules/bootstrap-icons/",
-                "output": "/"
-              }
-            ],
-            "styles": [
-              "./src/styles.scss",
-              "./node_modules/bootstrap/scss/bootstrap.scss",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-              "./node_modules/prismjs/themes/prism-okaidia.css"
-            ],
-            "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.js",
-              "./node_modules/marked/marked.min.js",
-              "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
-            ]
-          }
-        },
-        "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
-        },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": [
-              "./src/**/*.ts",
-              "./src/**/*.html"
-            ]
-          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "5eb5f275-1cef-4565-aeac-442bad6845a0",
+    "analytics": ",5eb5f275-1cef-4565-aeac-442bad6845a0",
     "cache": {
       "enabled": false
     },
     "schematicCollections": [
       "@angular-eslint/schematics"
     ]
+  },
+  "schematics": {
+    "schematics": {
+      "@schematics/angular:component": {
+        "type": "component"
+      },
+      "@schematics/angular:directive": {
+        "type": "directive"
+      },
+      "@schematics/angular:service": {
+        "type": "service"
+      },
+      "@schematics/angular:guard": {
+        "typeSeparator": "."
+      },
+      "optimization": {
+        "optimization": true,
+        "extractLicenses": true,
+        "sourceMap": false,
+        "namedChunks": false
+      },
+      "@schematics/angular:interceptor": {
+        "typeSeparator": "."
+      },
+      "@schematics/angular:module": {
+        "typeSeparator": "."
+      },
+      "@schematics/angular:resolver": {
+        "typeSeparator": "."
+      }
+    }
   }
 }
