--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "compodoc": "npx compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
-    "cp": "cp -f README.md src/assets",
+    "cp": "cpx README.md src/assets",
     "eslint": "eslint --fix src",
-    "kill-ng-serve": "killall -w -v \"ng serve\"",
+    "kill-ng-serve": "fkill --force \"ng serve\"",
     "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
-    "pre-commit": "lint-staged",
-    "prestart": "(fuser -n tcp -k 4200)&",
-    "start": "npm run cp && ng serve --watch",
+    "prestart": "npx kill-port 4200",
+    "start": "npm run cp && ng serve",
     "test": "jest",
     "upgrade-full": "npm-check-updates -u && npm upgrade",
     "watch": "npm --no-git-tag-version version patch && ng serve --watch"
@@ -41,33 +40,33 @@
       "git add -A ."
     ],
     "src/**/*.html": [
-      "prettier --write --ignore-unknown src/**/*.ts",
+      "prettier --write --ignore-unknown src/**/*.html",
       "git add -A ."
     ]
   },
   "dependencies": {
-    "@angular/animations": "^19.2.13",
-    "@angular/common": "^19.2.13",
-    "@angular/compiler": "^19.2.13",
-    "@angular/core": "^19.2.13",
-    "@angular/forms": "^19.2.13",
-    "@angular/platform-browser": "^19.2.13",
-    "@angular/platform-browser-dynamic": "^19.2.13",
-    "@angular/platform-server": "^19.2.13",
-    "@angular/router": "^19.2.13",
+    "@angular/animations": "^20.0.4",
+    "@angular/common": "^20.0.4",
+    "@angular/compiler": "^20.0.4",
+    "@angular/core": "^20.0.4",
+    "@angular/forms": "^20.0.4",
+    "@angular/platform-browser": "^20.0.4",
+    "@angular/platform-browser-dynamic": "^20.0.4",
+    "@angular/platform-server": "^20.0.4",
+    "@angular/router": "^20.0.4",
     "@compodoc/compodoc": "^1.1.26",
     "@faker-js/faker": "^9.8.0",
-    "@jest/globals": "^29.7.0",
-    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@jest/globals": "^30.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.0",
     "@octokit/core": "^7.0.2",
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "browserify-zlib": "^0.2.0",
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "depcheck": "^1.4.7",
-    "eslint-scope": "^8.3.0",
+    "eslint-scope": "^8.4.0",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
     "font-awesome": "^4.7.0",
@@ -77,13 +76,11 @@
     "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
-    "mongodb": "^6.16.0",
-    "nav-bar": "^1.0.3",
-    "ngx-markdown": "^19.1.1",
+    "mongodb": "^6.17.0",
+    "ngx-markdown": "^20.0.0",
     "node-gyp": "^11.2.0",
     "node-sass": "^9.0.0",
     "npm-check-updates": "^18.0.1",
-    "octokit": "^5.0.2",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.30.0",
     "process": "^0.11.10",
@@ -101,53 +98,53 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^19.0.1",
-    "@angular-devkit/build-angular": "^19.2.13",
-    "@angular-eslint/builder": "^19.4.0",
-    "@angular-eslint/eslint-plugin": "^19.4.0",
-    "@angular-eslint/eslint-plugin-template": "^19.4.0",
-    "@angular-eslint/schematics": "^19.4.0",
-    "@angular-eslint/template-parser": "^19.4.0",
-    "@angular/cli": "^19.2.13",
-    "@angular/compiler-cli": "^19.2.13",
-    "@angular/localize": "^19.2.13",
+    "@angular-devkit/build-angular": "^20.0.3",
+    "@angular-eslint/builder": "^20.1.1",
+    "@angular-eslint/eslint-plugin": "^20.1.1",
+    "@angular-eslint/eslint-plugin-template": "^20.1.1",
+    "@angular-eslint/schematics": "^20.1.1",
+    "@angular-eslint/template-parser": "^20.1.1",
+    "@angular/build": "^20.0.3",
+    "@angular/cli": "^20.0.3",
+    "@angular/compiler-cli": "^20.0.4",
+    "@angular/localize": "^20.0.4",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-typescript": "^7.27.1",
-    "@eslint/compat": "^1.2.9",
+    "@eslint/compat": "^1.3.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@types/cors": "^2.8.18",
+    "@eslint/js": "^9.29.0",
+    "@types/cors": "^2.8.19",
     "@types/eslint": "^9.6.1",
     "@types/eslint__eslintrc": "^3.3.0",
     "@types/eslint__js": "^9.14.0",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/express": "^5.0.2",
+    "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/jquery": "^3.5.32",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/lodash": "^4.17.17",
+    "@types/lodash": "^4.17.18",
     "@types/mocha": "^10.0.10",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^22.15.21",
+    "@types/node": "^24.0.3",
     "@types/node-sass": "^4.11.8",
     "@types/path-browserify": "^1.0.3",
     "@types/prismjs": "^1.26.5",
     "@types/showdown": "^2.0.6",
-    "@types/three": "^0.176.0",
+    "@types/three": "^0.177.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
     "angular-cli-ghpages": "^2.0.3",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9.27.0",
+    "babel-jest": "^30.0.2",
+    "cpx": "^1.5.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^16.1.0",
-    "jasmine-core": "~5.7.1",
+    "globals": "^16.2.0",
+    "jasmine-core": "~5.8.0",
     "jest": "^29.7.0",
     "jest-runner-prettier": "^1.0.0",
     "karma": "~6.4.4",
@@ -155,16 +152,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^18.0.0",
-    "lint-staged": "^16.0.0",
-    "ng-packagr": "^19.2.2",
+    "lint-staged": "^16.1.2",
+    "ng-packagr": "^20.0.1",
     "nyc": "^17.1.0",
     "prettier": "3.5.3",
-    "three": "^0.176.0",
-    "ts-jest": "^29.3.4",
+    "three": "^0.177.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "unique-names-generator": "^4.7.1",
-    "uuid": "^11.1.0"
+    "unique-names-generator": "^4.7.1"
   },
   "serve": {
     "options": {
