--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.41.7",
+  "version": "0.42.0",
   "private": true,
   "type": "module",
   "browser": {
@@ -14,7 +14,7 @@
     "prebuild": "npm version patch --no-git-tag-version",
     "build": "ng build 3d-inventory-angular-ui --verbose",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
-    "compodoc": "npx compodoc -p tsconfig.ddoc.json",
+    "compodoc": "npx compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
     "cp": "cpx README.md src/assets",
@@ -26,8 +26,13 @@
     "prestart": "npx kill-port 4200 && npm version patch --no-git-tag-version",
     "start": "npm run cp && ng serve",
     "test": "jest",
+    "minor": "npm version minor --no-git-tag-version",
     "upgrade-full": "npm-check-updates -u && npm upgrade",
-    "watch": "npm --no-git-tag-version version patch && ng serve --watch"
+    "watch": "npm --no-git-tag-version version patch && ng serve --watch",
+    "docker:build": "npm run minor && docker build -t 3d-inventory-ui . && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
+    "docker:push": "docker push ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
+    "docker:run": "docker run -p 4200:433 3d-inventory-ui",
+    "pre-commit": "npm run lint && npm run lint:eslint && npm run"
   },
   "husky": {
     "hooks": {
