--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,7 +6,9 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-on: [pull_request_target]
+'on':
+  pull_request_target:
+    types: [opened, synchronize, reopened]
 
 jobs:
   label:
@@ -14,7 +16,6 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-
     steps:
       - uses: actions/labeler@v4
         with:
