--- a/angular.json
+++ b/angular.json
@@ -54,8 +54,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "6mb",
+                  "maximumError": "8mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -72,7 +72,7 @@
               "outputHashing": "all"
             },
             "optimization": {
-              "optimization": true,
+              "optimization": false,
               "extractLicenses": true,
               "sourceMap": false,
               "namedChunks": false
