feat: update environment variables in .env.example; add .venv to .gitignore; modify Dockerfile for port exposure and health check; enhance build.sh for Docker management; update default.conf for health check endpoint; bump package version and update dependencies; adjust proxy configuration; add Google Cloud setup documentation

--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,7 @@
 server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
+  listen 8080;
 
-  server_name localhost;
+  server_name _;
 
   ssl_certificate /etc/ssl/certs/localhost.crt;
   ssl_certificate_key /etc/ssl/private/localhost.key;
@@ -15,5 +14,11 @@ server {
   location / {
       index index.html index.htm;
       try_files $uri $uri/ /index.html;
+  }
+
+  location /health {
+    access_log off;
+    return 200 "healthy\\n";
+    add_header Content-Type text/plain;
   }
 }
