--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-BASEURL=your-baseurl
 GITHUBAUTHTOKEN=your-githubauthtoken
+GH_USERNAME=your-gh_username
+GH_REPO=your-gh_repo
+GH_REPO_URL=your-gh_repo_url
+GHCR_PAT=your-ghcr_pat
+BASEURL=your-baseurl
