--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.44.1",
+  "version": "0.58.0",
   "private": true,
   "type": "module",
   "browser": {
@@ -12,25 +12,26 @@
   },
   "scripts": {
     "build": "ng build 3d-inventory-angular-ui --verbose",
+    "check:depcheck": "npx depcheck",
+    "check:npm-check": "npx npm-check",
+    "check:upgrade": "npx npm-check-updates -u && npm upgrade",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc:serve": "npx compodoc -p tsconfig.doc.json -s",
     "cp": "cpx README.md src/assets",
-    "docker:build": "docker build -t 3d-inventory-ui . && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:latest && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:$(node -p \"require('./package.json').version\")",
-    "docker:compile": "npm run minor && ./build.sh",
-    "docker:push": "echo $CR_PAT | docker login ghcr.io -u karol-preiskorn --password-stdin && docker push ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
+    "docker:build": "./build.sh",
     "docker:run": "docker run -p 4200:433 3d-inventory-ui",
     "kill-ng-serve": "fkill --force \"ng serve\"",
     "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
-    "minor": "npm version minor --no-git-tag-version",
     "pre-commit": "npm run lint && npm run lint:eslint && npm run",
     "security:check": "npm audit --audit-level high && npm run lint",
-    "security:fix": "npm audit fix",
     "prestart": "npx kill-port 4200 && npm version patch --no-git-tag-version",
     "start": "npm run cp && ng serve",
     "test": "jest",
     "upgrade-full": "npm-check-updates -u && npm upgrade",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:patch": "npm version patch --no-git-tag-version",
     "watch": "npm --no-git-tag-version version patch && ng serve --watch"
   },
   "husky": {
@@ -50,110 +51,81 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^20.0.6",
-    "@angular/common": "^20.0.6",
-    "@angular/compiler": "^20.0.6",
-    "@angular/core": "^20.0.6",
-    "@angular/forms": "^20.0.6",
-    "@angular/platform-browser": "^20.0.6",
-    "@angular/platform-browser-dynamic": "^20.0.6",
-    "@angular/platform-server": "^20.0.6",
-    "@angular/router": "^20.0.6",
+    "@angular/animations": "^20.1.0",
+    "@angular/common": "^20.1.0",
+    "@angular/compiler": "^20.1.0",
+    "@angular/core": "^20.1.0",
+    "@angular/forms": "^20.1.0",
+    "@angular/platform-browser": "^20.1.0",
+    "@angular/platform-browser-dynamic": "^20.1.0",
+    "@angular/platform-server": "^20.1.0",
+    "@angular/router": "^20.1.0",
     "@compodoc/compodoc": "^1.1.26",
     "@faker-js/faker": "^9.9.0",
     "@jest/globals": "^30.0.4",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
-    "@octokit/core": "^7.0.2",
+    "@octokit/core": "^7.0.3",
+    "@typescript-eslint/parser": "^8.36.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "browserify-zlib": "^0.2.0",
-    "chalk": "^5.4.1",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
     "depcheck": "^1.4.7",
-    "eslint-scope": "^8.4.0",
-    "express": "^5.1.0",
     "firebase": "^11.10.0",
     "font-awesome": "^4.7.0",
-    "https-browserify": "^1.0.0",
-    "install": "^0.13.0",
     "jsdom": "^26.1.0",
-    "lodash": "^4.17.21",
-    "mkdirp": "^3.0.1",
-    "mongodb": "^6.17.0",
-    "ngx-markdown": "^20.0.0",
-    "node-gyp": "^11.2.0",
-    "node-sass": "^9.0.0",
     "npm-check-updates": "^18.0.1",
-    "path-browserify": "^1.0.1",
     "prismjs": "^1.30.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
     "rxjs": "~7.8.2",
     "showdown": "^2.1.0",
     "stream": "^0.0.3",
-    "stream-browserify": "^3.0.0",
-    "three-orbitcontrols-ts": "^0.1.2",
-    "timers": "^0.1.1",
-    "timers-browserify": "^2.0.12",
-    "ts-sync-request": "^1.4.1",
-    "tslib": "^2.8.1",
     "winston": "^3.17.0",
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.0.5",
-    "@angular/build": "^20.0.5",
-    "@angular/cli": "^20.0.5",
-    "@angular/compiler-cli": "^20.0.6",
-    "@angular/localize": "^20.0.6",
+    "@angular-devkit/build-angular": "^20.1.0",
+    "@angular/build": "^20.1.0",
+    "@angular/cli": "^20.1.0",
+    "@angular/compiler-cli": "^20.1.0",
+    "@angular/localize": "^20.1.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
-    "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.30.1",
-    "@types/cors": "^2.8.19",
+    "@eslint/js": "^9.31.0",
     "@types/eslint": "^9.6.1",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^9.14.0",
-    "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.0.0",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/lodash": "^4.17.20",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.0.10",
-    "@types/node-sass": "^4.11.8",
-    "@types/path-browserify": "^1.0.3",
+    "@types/node": "^24.0.13",
     "@types/prismjs": "^1.26.5",
     "@types/showdown": "^2.0.6",
-    "@types/three": "^0.178.0",
+    "@types/three": "^0.178.1",
     "@types/uuid": "^10.0.0",
     "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "20.1.1",
     "babel-jest": "^30.0.4",
     "cpx": "^1.5.0",
-    "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint": "^9.31.0",
     "eslint-plugin-node": "11.1.0",
     "globals": "^16.3.0",
     "jasmine-core": "~5.8.0",
-    "jest": "^29.5.0",
+    "jest": "^29.0.0",
     "karma": "~6.4.4",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^18.0.0",
     "lint-staged": "^16.1.2",
-    "ng-packagr": "^20.0.1",
     "nyc": "^17.1.0",
     "prettier": "3.6.2",
     "three": "^0.178.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "8.34.1",
-    "unique-names-generator": "^4.7.1"
+    "typescript-eslint": "8.36.0"
   },
   "serve": {
     "options": {
