feat: update environment configuration and dependencies; modify base URL in environment.prod.ts; enhance Dockerfile and build scripts; improve nginx configuration for CORS and security; add HTTP interceptor for credentials

--- a/angular.json
+++ b/angular.json
@@ -139,7 +139,7 @@
         "typeSeparator": "."
       },
       "optimization": {
-        "optimization": true,
+        "optimization": {"styles": {"minify": true, "inlineCritical": false}},
         "extractLicenses": true,
         "sourceMap": false,
         "namedChunks": false
