--- a/default.conf
+++ b/default.conf
@@ -1,24 +1,63 @@
+# nginx configuration for serving an Angular app with SSL
+# This configuration listens on port 8080 and serves the app over HTTPS.
+
 server {
   listen 8080;
 
   server_name _;
 
-  ssl_certificate /etc/ssl/certs/localhost.crt;
-  ssl_certificate_key /etc/ssl/private/localhost.key;
+  # ssl_certificate /etc/ssl/certs/localhost.crt;
+  # ssl_certificate_key /etc/ssl/private/localhost.key;
 
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!aNULL:!MD5;
+  # ssl_protocols TLSv1.2 TLSv1.3;
+  # ssl_ciphers HIGH:!aNULL:!MD5;
 
   root /usr/share/nginx/html;
+  index index.html index.htm;
 
   location / {
-      index index.html index.htm;
-      try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ /index.html;
+
+    # TEMPORARY: Add CORS headers for debugging
+    add_header Access-Control-Allow-Origin "*" always;
+    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+    add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization" always;
+
+    # # Proxy requests to the backend API
+    # proxy_pass http://d-inventory-api.ultimasolution.pl;
+    # proxy_http_version 1.1;
+    # proxy_set_header Host $host;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+
+    # 🔐 Dodaj nagłówki CORS
+    # add_header Access-Control-Allow-Origin "https://3d-inventory.ultimasolution.pl";
+    # add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+    # add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization";
+    # add_header Access-Control-Allow-Credentials true;
+
+    # # Handle preflight requests
+    # if ($request_method = 'OPTIONS') {
+    #     add_header Access-Control-Allow-Origin "https://3d-inventory.ultimasolution.pl";
+    #     add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+    #     add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization";
+    #     add_header Access-Control-Max-Age 86400;
+    #     return 204;
+    # }
   }
 
   location /health {
     access_log off;
-    return 200 "healthy\\n";
+    return 200 "healthy\n";
     add_header Content-Type text/plain;
   }
+
+  # Optional: Add basic security headers
+  add_header X-Frame-Options "SAMEORIGIN" always;
+  add_header X-Content-Type-Options "nosniff" always;
+
+  # Enable gzip compression
+  gzip on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
