--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.58.0",
+  "version": "0.58.1",
   "private": true,
   "type": "module",
   "browser": {
@@ -51,29 +51,30 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^20.1.0",
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/platform-browser-dynamic": "^20.1.0",
-    "@angular/platform-server": "^20.1.0",
-    "@angular/router": "^20.1.0",
+    "@angular/animations": "^20.1.3",
+    "@angular/common": "^20.1.3",
+    "@angular/compiler": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@angular/platform-browser": "^20.1.3",
+    "@angular/platform-browser-dynamic": "^20.1.3",
+    "@angular/platform-server": "^20.1.3",
+    "@angular/router": "^20.1.3",
     "@compodoc/compodoc": "^1.1.26",
     "@faker-js/faker": "^9.9.0",
-    "@jest/globals": "^30.0.4",
+    "@jest/globals": "^29.0.0",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@octokit/core": "^7.0.3",
-    "@typescript-eslint/parser": "^8.36.0",
+    "@popperjs/core": "^2.11.8",
+    "@typescript-eslint/parser": "^8.38.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "browserify-zlib": "^0.2.0",
     "depcheck": "^1.4.7",
-    "firebase": "^11.10.0",
+    "firebase": "^12.0.0",
     "font-awesome": "^4.7.0",
     "jsdom": "^26.1.0",
-    "npm-check-updates": "^18.0.1",
+    "npm-check-updates": "^18.0.2",
     "prismjs": "^1.30.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
@@ -84,11 +85,11 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.1.0",
-    "@angular/build": "^20.1.0",
-    "@angular/cli": "^20.1.0",
-    "@angular/compiler-cli": "^20.1.0",
-    "@angular/localize": "^20.1.0",
+    "@angular-devkit/build-angular": "^20.1.2",
+    "@angular/build": "^20.1.2",
+    "@angular/cli": "^20.1.2",
+    "@angular/compiler-cli": "^20.1.3",
+    "@angular/localize": "^20.1.3",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3.3.1",
@@ -101,19 +102,19 @@
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.0.13",
+    "@types/node": "^24.1.0",
     "@types/prismjs": "^1.26.5",
     "@types/showdown": "^2.0.6",
     "@types/three": "^0.178.1",
     "@types/uuid": "^10.0.0",
     "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "20.1.1",
-    "babel-jest": "^30.0.4",
+    "babel-jest": "^29.0.0",
     "cpx": "^1.5.0",
     "eslint": "^9.31.0",
     "eslint-plugin-node": "11.1.0",
     "globals": "^16.3.0",
-    "jasmine-core": "~5.8.0",
+    "jasmine-core": "~5.9.0",
     "jest": "^29.0.0",
     "karma": "~6.4.4",
     "karma-coverage": "~2.2.1",
@@ -125,7 +126,7 @@
     "prettier": "3.6.2",
     "three": "^0.178.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "8.36.0"
+    "typescript-eslint": "8.38.0"
   },
   "serve": {
     "options": {
