--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc:serve": "npx compodoc -p tsconfig.doc.json -s",
     "cp": "cpx README.md src/assets",
-    "docker:build": "./build.sh",
+    "docker:build": "npm run version:patch && ./build.sh",
     "docker:run": "docker run -p 4200:433 3d-inventory-ui",
     "kill-ng-serve": "fkill --force \"ng serve\"",
     "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
-    "pre-commit": "npm run lint && npm run lint:eslint && npm run",
+    "pre-commit": "npm run lint && npm run lint:eslint && npm run version:minor",
     "security:check": "npm audit --audit-level high && npm run lint",
     "prestart": "npx kill-port 4200 && npm version patch --no-git-tag-version",
     "start": "npm run cp && ng serve",
@@ -81,13 +81,14 @@
     "rxjs": "~7.8.2",
     "showdown": "^2.1.0",
     "stream": "^0.0.3",
+    "tslib": "^2.8.1",
     "winston": "^3.17.0",
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.1.2",
-    "@angular/build": "^20.1.2",
-    "@angular/cli": "^20.1.2",
+    "@angular-devkit/build-angular": "^20.1.3",
+    "@angular/build": "^20.1.3",
+    "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.3",
     "@angular/localize": "^20.1.3",
     "@babel/preset-env": "^7.28.0",
