--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,17 +12,20 @@
   },
   "compileOnSave": true,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "declaration": false,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
+    "skipLibCheck": true,
     "lib": [
       "es2022",
       "dom"
     ],
-    "module": "es2022",
+    "module": "ES2022",
     "moduleResolution": "bundler",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
@@ -31,13 +34,11 @@
     "strict": true,
     "strictPropertyInitialization": false,
     "target": "ES2022",
-    "types": [
-      "jest"
-    ]
+    "types": []
   },
   "exclude": [
     "src/**/*.spec.ts",
-    "src/**/*.test.ts",
+    "src/**/*.test.ts"
   ],
   "include": [
     "src/**/*.ts"
