feat(auth): implement authentication service with login, logout, and token management
feat(log): update log service to improve logging functionality and error handling

test(user): add unit tests for user service with various user operations

feat(user): create user service for managing user data and permissions

feat(shared): define user-related interfaces and enums for better type safety

fix(eslint): update ESLint configuration for TypeScript support

fix(main): refactor main.ts to streamline HTTP client setup

chore(proxy): add proxy configuration for API requests

chore(task): update task.json to improve problem matching for TypeScript

chore(tsconfig): refine TypeScript configuration for better project structure

chore(tsconfig): update ESLint TypeScript configuration for improved linting

chore(tsconfig): enhance main TypeScript configuration for better compatibility

chore(tsconfig): clean up spec TypeScript configuration for testing

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,9 +2,11 @@
   "extends": "./tsconfig.json",
   "include": [
     "src/**/*.ts",
-    "src/*.ts",
+    "src/*.ts"
   ],
   "exclude": [
+    "node_modules",
+    "dist",
     "src/**/*.spec.ts",
     "src/environments/environment.ts"
   ]
