--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.58.1",
+  "version": "0.58.14",
   "private": true,
   "type": "module",
   "browser": {
@@ -12,11 +12,11 @@
   },
   "scripts": {
     "build": "ng build 3d-inventory-angular-ui --verbose",
-    "check:depcheck": "npx depcheck",
-    "check:npm-check": "npx npm-check",
-    "check:upgrade": "npx npm-check-updates -u && npm upgrade",
-    "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
-    "compodoc:serve": "npx compodoc -p tsconfig.doc.json -s",
+    "check:depcheck": "depcheck",
+    "check:npm-check": "npm-check",
+    "check:upgrade": "npm-check-updates -u && npm upgrade",
+    "clear": "rimraf dist documentation nyc_output node_modules package-lock.json target",
+    "compodoc:serve": "compodoc -p tsconfig.doc.json -s",
     "cp": "cpx README.md src/assets",
     "docker:build": "npm run version:patch && ./build.sh",
     "docker:run": "docker run -p 4200:433 3d-inventory-ui",
@@ -41,13 +41,13 @@
   },
   "lint-staged": {
     "src/**/*.{ts,js}": [
-      "prettier --write --ignore-unknown src/**/*.ts",
-      "eslint --fix src",
-      "git add -A ."
+      "prettier --write --ignore-unknown",
+      "eslint --fix",
+      "git add"
     ],
     "src/**/*.html": [
-      "prettier --write --ignore-unknown src/**/*.html",
-      "git add -A ."
+      "prettier --write --ignore-unknown",
+      "git add"
     ]
   },
   "dependencies": {
@@ -74,11 +74,11 @@
     "firebase": "^12.0.0",
     "font-awesome": "^4.7.0",
     "jsdom": "^26.1.0",
+    "ngx-pagination": "^6.0.3",
     "npm-check-updates": "^18.0.2",
     "prismjs": "^1.30.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
-    "rxjs": "~7.8.2",
     "showdown": "^2.1.0",
     "stream": "^0.0.3",
     "tslib": "^2.8.1",
@@ -103,7 +103,7 @@
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.3.3",
     "@types/prismjs": "^1.26.5",
     "@types/showdown": "^2.0.6",
     "@types/three": "^0.178.1",
@@ -122,7 +122,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^18.0.0",
-    "lint-staged": "^16.1.2",
+    "lint-staged": "^16.1.6",
     "nyc": "^17.1.0",
     "prettier": "3.6.2",
     "three": "^0.178.0",
