--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -4,7 +4,10 @@
   ],
   "exclude": [
     "src/**/*.spec.ts",
-    "src/**/*.test.ts"
+    "src/**/*.test.ts",
+    "node_modules",
+    "dist",
+    "documentation"
   ],
   "compilerOptions": {
     "target": "ES2022",
