--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,26 +1,20 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
-      "@angular/localize"
+      "jasmine"
     ]
   },
-  "parserOptions": {
-    "project": "./tsconfig.spec.json",
-    "tsconfigRootDir": "."
-  },
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "src/test.ts"
   ],
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/types/**/*.d.ts"
   ],
-  "ignores": [
-    "src/**/*.spec.ts"
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
