refactor(tests): migrate from Jasmine to Jest for unit tests
- Updated AuthGuard tests to use Jest mocking and assertions.
- Refactored AuthenticationService tests to replace Jasmine spies with Jest mocks.
- Introduced DebugService tests with comprehensive logging functionality checks.
- Added DialogService tests to validate confirmation and alert dialog interactions.
- Enhanced UserService tests with Jest mocking for HTTP requests.
- Created ConfirmDialogComponent tests to ensure proper dialog behavior and accessibility.
- Updated login functionality tests to utilize Jest for router mocking.
- Added test setup for Angular i18n support with $localize polyfill.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,16 @@
     "prestart": "npx kill-port 4200 && npm version patch --no-git-tag-version",
     "start": "npm run cp && ng serve",
     "test": "jest",
+    "test:fast": "jest --config=jest.config.fast.ts",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch --config=jest.config.fast.ts",
+    "test:single": "jest --config=jest.config.fast.ts --testNamePattern",
+    "test:ci": "jest --ci --coverage --watchAll=false --passWithNoTests",
+    "coverage:badges": "./scripts/coverage-badges.sh",
+    "quality:gate": "./scripts/quality-gate.sh",
+    "quality:full": "npm run lint:check && npm run test:ci && npm run quality:gate",
+    "performance:lighthouse": "lighthouse http://localhost:4200 --output=html --output-path=./lighthouse-report.html",
+    "ci:pipeline": "npm run quality:full && npm run build:prod",
     "version:minor": "npm version minor --no-git-tag-version",
     "version:patch": "npm version patch --no-git-tag-version",
     "watch": "npm --no-git-tag-version version patch && ng serve --watch"
