feat: Implement user profile management component
- Added user-profile.component.html for user profile UI.
- Created user-profile.component.scss for styling the profile component.
- Developed user-profile.component.ts to handle user data, form submissions, and password changes.
- Integrated admin guard to protect admin routes.
- Added unit tests for AdminGuard to ensure proper access control.
- Updated authentication service to correctly handle user roles and permissions.
- Enhanced user service to manage user data retrieval and validation.
- Modified log service to include user information in log entries.
- Updated user interface to reflect changes in user data structure (username instead of name).

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/prismjs/themes/prism-okaidia.css",
               "src/styles.scss"
             ],
@@ -67,8 +67,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "5kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "8kb",
+                  "maximumError": "15kb"
                 }
               ],
               "fileReplacements": [
