--- a/default.conf
+++ b/default.conf
@@ -15,6 +15,39 @@ server {
   root /usr/share/nginx/html;
   index index.html index.htm;
 
+  # Ensure proper MIME types for JavaScript modules and other files
+  types {
+    application/javascript js mjs;
+    text/css css;
+    text/html html htm;
+    application/json json;
+    image/svg+xml svg svgz;
+    image/png png;
+    image/jpeg jpg jpeg;
+    image/gif gif;
+    image/webp webp;
+    font/woff woff;
+    font/woff2 woff2;
+    font/ttf ttf;
+    font/eot eot;
+  }
+
+  # Serve static files (JS, CSS, assets) directly with proper caching
+  # This prevents the try_files fallback from serving index.html for these files
+  location ~ \.(js|mjs|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map|webp)$ {
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+    add_header X-Content-Type-Options "nosniff" always;
+    try_files $uri =404;
+  }
+
+  # Special handling for polyfills and other critical JS files
+  location ~* ^.+\.(js|mjs)$ {
+    add_header Content-Type application/javascript;
+    add_header X-Content-Type-Options "nosniff" always;
+    try_files $uri =404;
+  }
+
   location / {
     try_files $uri $uri/ /index.html;
 
