feat: Implement user role management and permissions modal
- Added styles for permissions modal in user profile component.
- Enhanced user profile component to display user role and manage permissions.
- Introduced role formatting and permissions grouping logic.
- Updated admin guard tests to utilize BehaviorSubject for auth state.
- Modified authentication service to extract role and permissions from JWT.
- Updated JwtPayload interface to include role and permissions fields.
- Created integration tests for user role management functionality.
- Added shell scripts for verifying admin access and UI fixes.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.59.87",
+  "version": "0.59.88",
   "private": true,
   "type": "module",
   "browser": {
@@ -16,12 +16,12 @@
     "build:prod": "ng build 3d-inventory-angular-ui --configuration=production",
     "build:analyze": "ANALYZE=true ng build 3d-inventory-angular-ui --configuration=production",
     "check:depcheck": "depcheck",
-    "check:npm-check": "npm-check",
+    "check:npm-check": "npx npm-check",
     "check:upgrade": "npm-check-updates -u && npm upgrade",
     "clear": "rimraf dist documentation nyc_output node_modules package-lock.json target",
     "compodoc:serve": "compodoc -p tsconfig.doc.json -s",
     "cp": "cpx README.md src/assets",
-    "gcp:build": "npm run version:patch && ./build.sh",
+    "gcp:build": "./build.sh",
     "docker:run": "docker run -p 4200:433 3d-inventory-ui",
     "kill-ng-serve": "fkill --force \"ng serve\"",
     "lint": "ng lint",
@@ -132,10 +132,9 @@
     "jest-preset-angular": "^15.0.2",
     "jest-runner-eslint": "^2.3.0",
     "lint-staged": "^16.2.3",
-    "nyc": "^17.1.0",
     "prettier": "3.6.2",
     "three": "^0.180.0",
-    "ts-jest": "^29.4.4",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.9.3",
     "typescript-eslint": "8.46.0",
     "webpack-bundle-analyzer": "^4.10.2"
