--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "lint:fix-all": "./quick-lint-fix.sh",
     "pre-commit": "npm run lint && npm run lint:eslint && npm run version:minor",
     "security:check": "npm audit --audit-level high && npm run lint",
+    "snyk:test": "snyk test",
+    "snyk:test:exclude-docs": "snyk test --exclude=docs",
+    "snyk:monitor": "snyk monitor",
+    "snyk:auth": "snyk auth",
+    "snyk:code": "snyk code test",
+    "snyk:iac": "snyk iac test",
     "prestart": "npx kill-port 4200 && npm version patch --no-git-tag-version",
     "start": "npm run cp && ng serve",
     "test": "jest",
